--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,55 @@
+backcall==0.2.0
 beautifulsoup4==4.9.3
 bs4==0.0.1
 certifi==2020.11.8
 chardet==3.0.4
+click==7.1.2
+colorama==0.4.4
+cssselect==1.1.0
 cycler==0.10.0
+decorator==4.4.2
+feedfinder2==0.0.4
+feedparser==6.0.2
+filelock==3.0.12
 idna==2.10
+ipykernel==5.4.2
+ipython==7.19.0
+ipython-genutils==0.2.0
+jedi==0.18.0
+jieba3k==0.35.1
+joblib==1.0.0
+jupyter-client==6.1.7
+jupyter-core==4.7.0
 kiwisolver==1.3.1
+lxml==4.6.2
 matplotlib==3.3.3
+newspaper3k==0.2.8
+nltk==3.5
 numpy==1.19.4
 pandas==1.1.4
+parso==0.8.1
+pickleshare==0.7.5
 Pillow==8.0.1
+prompt-toolkit==3.0.8
+Pygments==2.7.3
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.4
+pywin32==300
+PyYAML==5.3.1
+pyzmq==20.0.0
+regex==2020.11.13
 requests==2.25.0
+requests-file==1.5.1
 scipy==1.5.4
 seaborn==0.11.0
+sgmllib3k==1.0.0
 six==1.15.0
 soupsieve==2.0.1
+tinysegmenter==0.3
+tldextract==3.1.0
+tornado==6.1
+tqdm==4.55.0
+traitlets==5.0.5
 urllib3==1.26.2
+wcwidth==0.2.5
