--- a/requirements.txt
+++ b/requirements.txt
@@ -41,11 +41,13 @@ pyzmq==20.0.0
 regex==2020.11.13
 requests==2.25.0
 requests-file==1.5.1
+scikit-learn==0.24.2
 scipy==1.5.4
 seaborn==0.11.0
 sgmllib3k==1.0.0
 six==1.15.0
 soupsieve==2.0.1
+threadpoolctl==2.1.0
 tinysegmenter==0.3
 tldextract==3.1.0
 tornado==6.1
